js/js.translator/testData/incremental/invalidation/multiPlatformSimple/lib2/js/l2js.1.kt
actual fun lib2CommonFun(): Int = lib1CommonFun() + 1 + 1
